<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_bg"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".about_us_screen">




        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/green_color_2"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="90dp"
                    android:layout_gravity="top|center"
                    android:background="@drawable/strawberry"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/green_color_1"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_title"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/green_color_1"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/about_us_blurb"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abtus_blurb2"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_by"
                    android:textSize="12sp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

